cmake_minimum_required (VERSION 2.8)
project (countpages)
include_directories (${CMAKE_SOURCE_DIR}/../../libmupdf/include)
link_directories (${CMAKE_SOURCE_DIR}/../../libmupdf/lib)
add_executable (${PROJECT_NAME} main.c)
target_link_libraries (${PROJECT_NAME} fitz)
target_link_libraries (${PROJECT_NAME} freetype jbig2dec jpeg openjpeg z m)
