cmake_minimum_required (VERSION 2.8 FATAL_ERROR)
project (qimage)

add_executable (${PROJECT_NAME} main.cpp)
target_link_libraries (${PROJECT_NAME} ${MuPDF_LIBRARIES})
if (Qt5Widgets_FOUND)
	qt5_use_modules (${PROJECT_NAME} Widgets)
else (Qt4_FOUND)
	target_link_libraries (${PROJECT_NAME} ${QT_LIBRARIES})
endif ()
